Fix UI glitches: Remove stuck active class from Relaxation button and hardcode default Info Box text

--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
         <div id="setupView" class="view-setup">
             <!-- Mode Selection -->
             <div class="modes-grid">
-                <div class="mode-card active" onclick="selectMode('relax')" data-mode="relax">
+                <div class="mode-card" onclick="selectMode('relax')" data-mode="relax">
                     <span class="mode-title">🌿 Relaxation</span>
                     <span class="mode-desc">Alpha/Thêta (8Hz)</span>
                 </div>
@@ -755,7 +755,10 @@
                 </div>
             </div>
 
-            <div id="modeInfo" class="mode-info-box"></div>
+            <div id="modeInfo" class="mode-info-box">
+                <strong>🌿 Relaxation</strong><br>Favorise la détente profonde et la cohérence cardiaque. Idéal pour
+                réduire le stress.
+            </div>
 
             <!-- Controls (Setup only) -->
             <div class="controls">
