Move Mono descriptions into the Mono Modal directly as requested

--- a/index.html
+++ b/index.html
@@ -1726,16 +1726,24 @@
             <h2 id="monoModalTitle" class="modal-title">✨ Fréquences Mono</h2>
 
             <div class="modes-grid" style="grid-template-columns: 1fr; margin-bottom: 20px;">
-                <div class="mode-card" onclick="selectModeFromModal('pure432')" data-mode="pure432">
-                    <span class="mode-title">🌍 Naturel</span>
-                    <span class="mode-desc">432 Hz Pur</span>
+                <div class="mode-card" onclick="selectModeFromModal('pure432')" data-mode="pure432"
+                    style="height: auto; min-height: auto;">
+                    <span class="mode-title">🌍 Naturel (432 Hz)</span>
+                    <span class="mode-desc"
+                        style="margin-top: 5px; font-size: 0.9rem; line-height: 1.4; color: var(--text-dark);">Ralentit
+                        le rythme cardiaque, réduit l'anxiété et favorise la détente émotionnelle. Sensation de clarté
+                        et de connexion à la nature.</span>
                 </div>
-                <div class="mode-card" onclick="selectModeFromModal('pure440')" data-mode="pure440">
-                    <span class="mode-title">🎵 Standard</span>
-                    <span class="mode-desc">440 Hz Pur</span>
+                <div class="mode-card" onclick="selectModeFromModal('pure440')" data-mode="pure440"
+                    style="height: auto; min-height: auto;">
+                    <span class="mode-title">🎵 Standard (440 Hz)</span>
+                    <span class="mode-desc"
+                        style="margin-top: 5px; font-size: 0.9rem; line-height: 1.4; color: var(--text-dark);">Perçu
+                        comme plus lumineux et stimulant pour la concentration et la pensée analytique. Vibration
+                        dynamique.</span>
                 </div>
             </div>
-            <p id="monoModalDesc" style="color:var(--text-light); font-size:0.9rem; line-height:1.5;">
+            <p id="monoModalDesc" style="color:var(--text-light); font-size:0.8rem; line-height:1.4;">
                 Ces fréquences pures ne sont pas binaurales...
             </p>
         </div>
