Fix UI alignment by justifying to start, force active-mode on Relaxation, and provide default Info Box content

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             text-align: left;
             display: flex;
             flex-direction: column;
-            justify-content: center;
+            justify-content: flex-start;
             /* Center content vertically */
             height: 100%;
             /* Fill grid cell exactly */
@@ -739,7 +739,7 @@
         <div id="setupView" class="view-setup">
             <!-- Mode Selection -->
             <div class="modes-grid">
-                <div class="mode-card" onclick="selectMode('relax')" data-mode="relax">
+                <div class="mode-card active-mode" onclick="selectMode('relax')" data-mode="relax">
                     <span class="mode-title">🌿 Relaxation</span>
                     <span class="mode-desc">Alpha/Thêta (8Hz)</span>
                 </div>
@@ -757,7 +757,10 @@
                 </div>
             </div>
 
-            <div id="modeInfo" class="mode-info-box"></div>
+            <div id="modeInfo" class="mode-info-box">
+                <strong>🌿 Relaxation</strong><br>Favorise la détente profonde et la cohérence cardiaque. Idéal pour
+                réduire le stress.
+            </div>
 
             <!-- Controls (Setup only) -->
             <div class="controls">
