--- a/index.html
+++ b/index.html
@@ -126,19 +126,20 @@
             background: rgba(255, 255, 255, 0.6);
             border: 1px solid rgba(255, 255, 255, 0.5);
             /* Subtle border */
-            padding: 20px;
+            padding: 20px 15px;
             border-radius: 20px;
             cursor: pointer;
             transition: all 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
             text-align: left;
             display: flex;
             flex-direction: column;
-            justify-content: flex-start;
+            justify-content: center;
             /* Center content vertically */
             height: 100%;
             /* Fill grid cell exactly */
             min-height: 110px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.03);
+            overflow: hidden;
         }
 
         .mode-card:hover {
@@ -1762,12 +1763,12 @@
                 </div>
             </div>
             <p id="monoModalDesc"
-                style="color:var(--text-light); font-size:0.8rem; line-height:1.4; margin-bottom: 20px;">
+                style="color:var(--text-light); font-size:0.8rem; line-height:1.4; margin-bottom: 30px;">
                 Ces fréquences pures ne sont pas binaurales...
             </p>
 
             <button id="btnMonoStart" class="main-action-btn" onclick="startMonoSession()"
-                style="width: 100%; margin-top: 10px;">
+                style="width: 100%; padding: 18px 30px; font-size: 1.1rem; background: var(--primary); color: white; border-radius: 16px; box-shadow: 0 10px 20px rgba(74, 144, 226, 0.3); border: none;">
                 ▶ Commencer la session
             </button>
         </div>
