--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
             padding: 20px;
             border-radius: 20px;
             margin-top: 15px;
-            font-size: 1rem;
+            font-size: 0.75rem;
+            /* Reduced by request (~1/3 smaller than 1rem) */
             line-height: 1.5;
             color: var(--text-dark);
             border-left: 5px solid var(--primary);
