Fix: Force Relaxation button selected on load. Shorten Mono description.

--- a/index.html
+++ b/index.html
@@ -834,7 +834,7 @@
                 footer: { info: "Info", mono: "Mono", premium: "Premium", settings: "Réglages" },
                 monoModal: {
                     title: "✨ Fréquences Mono",
-                    desc: "Ces fréquences pures ne sont pas binaurales et peuvent être écoutées sans écouteurs. Elles n'induisent pas le même effet de synchronisation des hémisphères mais offrent une tonalité pure pour l'alignement.",
+                    desc: "Ces fréquences pures peuvent être écoutées sans écouteurs. Elles offrent une tonalité pure pour l'alignement.",
                     cards: {
                         pure432: { title: "🌍 Naturel (432 Hz)", desc: "Ralentit le rythme cardiaque, réduit l'anxiété et favorise la détente émotionnelle. Sensation de clarté et de connexion à la nature." },
                         pure440: { title: "🎵 Standard (440 Hz)", desc: "Perçu comme plus lumineux et stimulant pour la concentration et la pensée analytique. Vibration dynamique." }
@@ -894,7 +894,7 @@
                 footer: { info: "Info", mono: "Mono", premium: "Premium", settings: "Settings" },
                 monoModal: {
                     title: "✨ Mono Frequencies",
-                    desc: "These pure frequencies are not binaural and can be listened to without headphones. They do not induce the same hemispheric synchronization effect but offer a pure tone for alignment.",
+                    desc: "These pure frequencies can be listened to without headphones. They offer a pure tone for alignment.",
                     cards: {
                         pure432: { title: "🌍 Natural (432 Hz)", desc: "Slows heart rate, reduces anxiety and promotes emotional relaxation. Sensation of clarity and connection to nature." },
                         pure440: { title: "🎵 Standard (440 Hz)", desc: "Perceived as brighter and stimulating for concentration and analytical thinking. Dynamic vibration." }
@@ -1675,30 +1675,24 @@
         } catch (e) { console.error(e); }
 
         // --- INITIALIZATION ---
-        document.addEventListener('DOMContentLoaded', () => {
-            // Force check LocalStorage one last time for UI consistency
-            const finalPlan = localStorage.getItem('nu_brain_plan') || 'free';
-            if (finalPlan === 'premium') userPlan = 'premium';
+        // Script is at bottom of body, so DOM is guaranteed ready. No need for DOMContentLoaded.
 
-            // Init Interface
-            updateInterfaceLanguage();
+        // Force check LocalStorage one last time for UI consistency
+        const finalPlan = localStorage.getItem('nu_brain_plan') || 'free';
+        if (finalPlan === 'premium') userPlan = 'premium';
 
-            // Ensure currentMode is valid
-            if (!currentMode) currentMode = 'relax';
+        // ALWAYS set default mode to relax
+        currentMode = 'relax';
 
-            // Initialize UI with default mode immediately
-            selectMode(currentMode);
-        });
+        // Init Interface with language
+        updateInterfaceLanguage();
+
+        // FORCE select the default mode - THIS IS THE KEY LINE
+        selectMode('relax');
 
         // Add listeners for 'storage' and 'focus' to auto-update the UI when the user returns to the tab after payment.
         window.addEventListener('storage', checkSubscriptionStatus);
         window.addEventListener('focus', checkSubscriptionStatus);
-
-        // Init Interface
-        updateInterfaceLanguage();
-
-        // Force slider update
-        selectMode(currentMode);
 
         // Ensure billing state
         setBilling('monthly');
