Force inline styles on Relaxation button for guaranteed visual active state on load

--- a/index.html
+++ b/index.html
@@ -741,7 +741,8 @@
         <div id="setupView" class="view-setup">
             <!-- Mode Selection -->
             <div class="modes-grid">
-                <div class="mode-card active-mode" onclick="selectMode('relax')" data-mode="relax">
+                <div class="mode-card active-mode" onclick="selectMode('relax')" data-mode="relax"
+                    style="border: 2px solid #48BB78; background-color: #FFFFFF; box-shadow: 0 8px 25px rgba(72, 187, 120, 0.25);">
                     <span class="mode-title">🌿 Relaxation</span>
                     <span class="mode-desc">Alpha/Thêta (8Hz)</span>
                 </div>
