Update Mono description: 'pures' -> 'naturelles'

--- a/index.html
+++ b/index.html
@@ -835,7 +835,7 @@
                 footer: { info: "Info", mono: "Mono", premium: "Premium", settings: "Réglages" },
                 monoModal: {
                     title: "✨ Fréquences Mono",
-                    desc: "Ces fréquences pures peuvent être écoutées sans écouteurs. Elles offrent une tonalité pure pour l'alignement.",
+                    desc: "Ces fréquences naturelles peuvent être écoutées sans écouteurs. Elles offrent une tonalité pure pour l'alignement.",
                     cards: {
                         pure432: { title: "🌍 Naturel (432 Hz)", desc: "Ralentit le rythme cardiaque, réduit l'anxiété et favorise la détente émotionnelle. Sensation de clarté et de connexion à la nature." },
                         pure440: { title: "🎵 Standard (440 Hz)", desc: "Perçu comme plus lumineux et stimulant pour la concentration et la pensée analytique. Vibration dynamique." }
@@ -895,7 +895,7 @@
                 footer: { info: "Info", mono: "Mono", premium: "Premium", settings: "Settings" },
                 monoModal: {
                     title: "✨ Mono Frequencies",
-                    desc: "These pure frequencies can be listened to without headphones. They offer a pure tone for alignment.",
+                    desc: "These natural frequencies can be listened to without headphones. They offer a pure tone for alignment.",
                     cards: {
                         pure432: { title: "🌍 Natural (432 Hz)", desc: "Slows heart rate, reduces anxiety and promotes emotional relaxation. Sensation of clarity and connection to nature." },
                         pure440: { title: "🎵 Standard (440 Hz)", desc: "Perceived as brighter and stimulating for concentration and analytical thinking. Dynamic vibration." }
