Match info box border color to Relaxation button (green)

--- a/index.html
+++ b/index.html
@@ -760,7 +760,7 @@
                 </div>
             </div>
 
-            <div id="modeInfo" class="mode-info-box">
+            <div id="modeInfo" class="mode-info-box" style="border-left-color: #48BB78;">
                 <strong>🌿 Relaxation</strong><br>Favorise la détente profonde et la cohérence cardiaque. Idéal pour
                 réduire le stress.
             </div>
