--- a/index.html
+++ b/index.html
@@ -1743,8 +1743,8 @@
             <h2 id="monoModalTitle" class="modal-title">✨ Fréquences Mono</h2>
 
             <div class="modes-grid" style="grid-template-columns: 1fr; margin-bottom: 20px;">
-                <div class="mode-card" onclick="selectModeFromModal('pure432')" data-mode="pure432"
-                    style="height: auto; min-height: auto;">
+                <div class="mode-card active-mode" onclick="selectModeFromModal('pure432')" data-mode="pure432"
+                    style="height: auto; min-height: auto; border: 2px solid #38A169; background-color: #FFFFFF; box-shadow: 0 8px 25px rgba(56, 161, 105, 0.25);">
                     <span class="mode-title">🌍 Naturel (432 Hz)</span>
                     <span class="mode-desc"
                         style="margin-top: 5px; font-size: 0.9rem; line-height: 1.4; color: var(--text-dark);">Ralentit
